# keras2cpp

./: .gitignore  CMakeLists.txt  Makefile  dump_to_simple_cpp.py  keras_model.cc  keras_model.hpp  test_run_cnn.cc  test_run_cnn.py
example/: my_nn_arch.json
include/: datachunk.hpp  delegate.hpp  delegates.hpp  ipc.hpp  keras_model.hpp  layers.hpp
src/: CMakeLists.txt  datachunk.cc  delegates.cc  ipc.cc  keras_model.cc  layers.cc
tools/: dump_to_simple_cpp.py  example_main.cc  test_compare.py  test_run_cnn.cc  test_run_cnn.py
vgg16/: vgg16_arch.json
